--- a/src/styles/partials/_preparingContainers.scss
+++ b/src/styles/partials/_preparingContainers.scss
@@ -3,6 +3,8 @@
 .preparingContainersModal {
     position: fixed;
     display: flex;
+    justify-content: center;
+    align-content: center;
     flex-direction: column;
     width: 100%;
     height: 100%;
